v3.0.011:
- Automatically trim whitespace when entering IP address.

v3.0.010:
- Fixed issue with black screen on connect.

v3.0.009:
- Fixed spectator crash.

v3.0.008:
- Possible fix for input drops.

v3.0.007:
- Fix updating problems.
- Fix minor bug with mapping keyboard directions via F4 in-game.
- Allow changing input delay in offline modes.

v3.0.006:
- Clarify text for network delay / input delay.
- Fix crash when exiting caster.

v3.0.005:
- Changed max delay setting to be max real delay.
- Renamed max rollback to be default rollback.

v3.0.004:
- Fix another possible input drop issue.
- Don't adjust FPS when rollback is 4 or less, should be smoother this way.
- Prevent immediately starting in fullscreen mode due to issues.
- Increased delay during character select.

v3.0.003:
- Fixed choosing delay when rollback is 0.

v3.0.002:
- Less inputs drops (hopefully).

v3.0.001:
- Fixed Add_Handler_Protocol.bat
- Adjusted the FPS to be not as fast.

v3.0.000:
- Rollback netcode:
  Should be mostly stable right now, with a few extremely rare desyncs.
  Set rollback as needed (max 15 frames) to compensate for laggy / spikey networks.
  Can adjust rollback in-game with Alt + Number.
  Training mode rollback is untested.
  Note: rollback prevents replays from saving correctly right now, will fix in a later version.
- Automatic updates, checks on application startup by default.
- Moved max delay and max rollback to settings.
- Changed the spacebar to toggle fast-forward when spectating.

v2.1i:
- Fix crash caused by multiple spectators.
- Fix hang when quitting at the spectate menu.
- Prevent music from restarting in training mode.

v2.1h:
- Can set max allowed delay when hosting.
- Optional FPS control setting, try this if you often get FPS drops.

v2.1g:
- Fixed incorrectly repeated input at round start and after training mode reset.
- Fixed occasional connect timeout caused by relay server being down.